tests/NormalTests/paczka1/fuzzy1/76700222.err
Error in line 16: FoHcAByHip S874 11,31
Error in line 12: A817 S90 328,8
Error in line 22: KnTnWq8aA S397 51,6
